--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
-        </dependency>w
+        </dependency>
     </dependencies>
 
     <build>
