Add google, github and twitter authorization credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,21 @@ spring.datasource.username=postgres
 spring.datasource.password=K29r8Dhc79n2gPG86CRhoVt9NBxTa0Gk
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.clientId=CLIENT_ID
+spring.security.oauth2.client.registration.google.clientSecret=CLIENT_SECRET
+spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.google.scope=email, profile
+
+# GitHub OAuth2 Configuration
+spring.security.oauth2.client.registration.github.clientId=CLIENT_ID
+spring.security.oauth2.client.registration.github.clientSecret=CLIENT_SECRET
+spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.github.scope=user:email, read:user
+
+# Twitter OAuth2 Configuration
+spring.security.oauth2.client.registration.twitter.client-id=CLIENT_ID
+spring.security.oauth2.client.registration.twitter.client-secret=CLIENT_SECRET
+spring.security.oauth2.client.registration.twitter.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.twitter.scope=read:users
