Add missing statements, improve for readability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,22 @@
 #Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/auth
-spring.datasource.username=postgres
-spring.datasource.password=K29r8Dhc79n2gPG86CRhoVt9NBxTa0Gk
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.clientId=CLIENT_ID
-spring.security.oauth2.client.registration.google.clientSecret=CLIENT_SECRET
+spring.security.oauth2.client.registration.google.clientId=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.clientSecret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.google.scope=email, profile
 
 # GitHub OAuth2 Configuration
-spring.security.oauth2.client.registration.github.clientId=CLIENT_ID
-spring.security.oauth2.client.registration.github.clientSecret=CLIENT_SECRET
+spring.security.oauth2.client.registration.github.clientId=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.clientSecret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.github.scope=user:email, read:user
 
-# Twitter OAuth2 Configuration
-spring.security.oauth2.client.registration.twitter.client-id=CLIENT_ID
-spring.security.oauth2.client.registration.twitter.client-secret=CLIENT_SECRET
-spring.security.oauth2.client.registration.twitter.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
-spring.security.oauth2.client.registration.twitter.scope=read:users
+app.auth.tokenSecret=${AUTH_TOKEN_SECRET}
+app.auth.tokenExpirationMsec=864000000
+app.oauth2.authorizedRedirectUris=http://localhost:4200/oauth2/redirect
